fixed social icon gap, article font-family rockwell

--- a/eds/blocks/social-media/social-media.css
+++ b/eds/blocks/social-media/social-media.css
@@ -3,10 +3,6 @@
   margin-right: auto
 }
 
-.social-media-wrapper :is(.mb-8) {
-  margin-bottom: 2rem
-}
-
 .social-media-wrapper :is(.block) {
   display: block
 }
@@ -19,23 +15,15 @@
   max-width: 56rem
 }
 
-.social-media-wrapper :is(.gap-x-2) {
-  -moz-column-gap: 0.5rem;
-       column-gap: 0.5rem
+.social-media-wrapper :is(.gap-x-4) {
+  -moz-column-gap: 1rem;
+       column-gap: 1rem
 }
 
 .social-media-wrapper :is(.space-y-2 > :not([hidden]) ~ :not([hidden])) {
   --tw-space-y-reverse: 0;
   margin-top: calc(0.5rem * calc(1 - var(--tw-space-y-reverse)));
   margin-bottom: calc(0.5rem * var(--tw-space-y-reverse))
-}
-
-.social-media-wrapper :is(.pb-0) {
-  padding-bottom: 0px
-}
-
-.social-media-wrapper :is(.pt-4) {
-  padding-top: 1rem
 }
 
 .social-media-wrapper :is(.text-base) {
@@ -47,18 +35,12 @@
   font-weight: 700
 }
 
-.social-media-wrapper :is(.text-gray-600) {
-  --tw-text-opacity: 1;
-  color: rgb(75 85 99 / var(--tw-text-opacity))
-}
-
 .social-media-wrapper :is(.text-black) {
   --tw-text-opacity: 1;
   color: rgb(0 0 0 / var(--tw-text-opacity))
 }
 
-@media (min-width: 768px) {
-  .social-media-wrapper :is(.md\:pb-10) {
-    padding-bottom: 2.5rem
-  }
+.social-media-wrapper :is(.text-gray-600) {
+  --tw-text-opacity: 1;
+  color: rgb(75 85 99 / var(--tw-text-opacity))
 }
